Cập nhật lại CSS và cải thiện giao diện

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <section class="pricing-section">
             <h2>Giá Chỉ Còn 88,000 VNĐ</h2>
             <p>💰 Giá ưu đãi đặc biệt dành cho bạn.</p>
-            <button class="action-button">Liên Hệ Ngay</button>
+            <a href="https://zalo.me/84969480562" class="action-button" target="_blank">Liên Hệ Ngay</a>
         </section>
 
         <section class="review-section">
