--- a/index.html
+++ b/index.html
@@ -3,48 +3,145 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Locket Gold 2024</title>
+    <title>Premium Services Hub 2024</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="snowflakes">
+        <div class="snowflake">❄</div>
+        <div class="snowflake">❄</div>
+        <div class="snowflake">❄</div>
+        <div class="snowflake">❄</div>
+        <div class="snowflake">❄</div>
+        <div class="snowflake">❄</div>
+    </div>
+
     <header class="header">
-        <h1>Locket Gold - Đẳng Cấp Mới</h1>
-        <button onclick="scrollToContent()" class="action-button">Khám Phá Ngay</button>
+        <div class="header-container">
+            <h1>Premium Services Hub - Dịch Vụ Cao Cấp</h1>
+        </div>
+        <nav class="nav-links">
+            <button onclick="scrollToSection('locket')">Locket Gold</button>
+            <button onclick="scrollToSection('wink')">Wink Premium</button>
+            <button onclick="scrollToSection('picsart')">PicsArt Premium</button>
+            <button onclick="scrollToSection('soundcloud')">SoundCloud Premium</button>
+            <button onclick="scrollToSection('spotify')">Spotify Premium</button>
+            <button onclick="scrollToSection('capcut')">CapCut Premium</button>
+            <button onclick="scrollToSection('youtube')">YouTube Premium</button>
+        </nav>
     </header>
 
     <main id="main-content">
-        <section class="feature-section">
-            <h2>Tính Năng Độc Quyền</h2>
-            <div class="feature-grid">
-                <div class="feature-item">🎥 Đăng video với nhạc tùy chỉnh</div>
-                <div class="feature-item">🎨 Tùy chỉnh giao diện theo phong cách của bạn</div>
-                <div class="feature-item">🔒 Bảo mật tài khoản tối ưu</div>
-                <div class="feature-item">📊 Xem thống kê tương tác chi tiết</div>
-                <div class="feature-item">🚀 Cập nhật mới mỗi tuần</div>
-            </div>
+        <!-- Locket Gold Section -->
+        <section id="locket" class="app-section">
+            <h2>Locket Gold</h2>
+            <p>💎 Locket Gold mang đến cho bạn trải nghiệm đỉnh cao với những tính năng độc đáo.</p>
+            <ul>
+                <li>🎥 Đăng video với nhạc tùy chỉnh và hiệu ứng chuyên nghiệp.</li>
+                <li>🎨 Tùy chỉnh giao diện theo phong cách cá nhân.</li>
+                <li>🔒 Bảo mật tài khoản tối ưu.</li>
+            </ul>
+            <a href="#" class="action-button">Khám Phá Locket Gold</a>
         </section>
 
+        <!-- Wink Premium Section -->
+        <section id="wink" class="app-section">
+            <h2>Wink Premium</h2>
+            <p>✨ Trải nghiệm tuyệt vời với Wink Premium - ứng dụng giúp bạn kết nối với thế giới thông qua những tính năng độc đáo.</p>
+            <ul>
+                <li>📱 Tạo profile cá nhân dễ dàng và hiệu quả.</li>
+                <li>💬 Kết nối với bạn bè và người thân ở mọi nơi.</li>
+                <li>🌍 Kết nối qua tính năng chia sẻ địa điểm và thông tin nhanh chóng.</li>
+            </ul>
+            <a href="#" class="action-button">Khám Phá Wink Premium</a>
+        </section>
+
+        <!-- PicsArt Premium Section -->
+        <section id="picsart" class="app-section">
+            <h2>PicsArt Premium</h2>
+            <p>🎨 Tạo ra những bức ảnh đẹp như nghệ sĩ với PicsArt Premium, công cụ chỉnh sửa ảnh mạnh mẽ.</p>
+            <ul>
+                <li>🖌️ Tự do sáng tạo với bộ công cụ chỉnh sửa ảnh chuyên nghiệp.</li>
+                <li>🌈 Hàng nghìn hiệu ứng và bộ lọc màu sắc.</li>
+                <li>📸 Tạo video, ảnh động dễ dàng.</li>
+            </ul>
+            <a href="#" class="action-button">Khám Phá PicsArt Premium</a>
+        </section>
+
+        <!-- SoundCloud Premium Section -->
+        <section id="soundcloud" class="app-section">
+            <h2>SoundCloud Premium</h2>
+            <p>🎶 Thưởng thức nhạc mọi lúc mọi nơi với SoundCloud Premium, dịch vụ âm nhạc hàng đầu.</p>
+            <ul>
+                <li>🎧 Nghe nhạc không quảng cáo.</li>
+                <li>🔊 Truy cập vào hàng triệu bản nhạc độc quyền.</li>
+                <li>🎤 Tạo playlist và chia sẻ với bạn bè.</li>
+            </ul>
+            <a href="#" class="action-button">Khám Phá SoundCloud Premium</a>
+        </section>
+
+        <!-- Spotify Premium Section -->
+        <section id="spotify" class="app-section">
+            <h2>Spotify Premium</h2>
+            <p>🎶 Thưởng thức âm nhạc chất lượng cao với Spotify Premium, trải nghiệm không giới hạn.</p>
+            <ul>
+                <li>🎧 Nghe nhạc offline với chất lượng cao.</li>
+                <li>🔍 Tìm kiếm dễ dàng và chính xác.</li>
+                <li>🎶 Tạo playlist và khám phá những bản nhạc mới mẻ.</li>
+            </ul>
+            <a href="#" class="action-button">Khám Phá Spotify Premium</a>
+        </section>
+
+        <!-- CapCut Premium Section -->
+        <section id="capcut" class="app-section">
+            <h2>CapCut Premium</h2>
+            <p>🎬 Dễ dàng tạo video chuyên nghiệp với CapCut Premium, công cụ chỉnh sửa video mạnh mẽ.</p>
+            <ul>
+                <li>🎥 Tạo video chất lượng cao với hiệu ứng đặc biệt.</li>
+                <li>🎶 Thêm nhạc nền và hiệu ứng âm thanh độc đáo.</li>
+                <li>📱 Dễ dàng chia sẻ video trên các nền tảng xã hội.</li>
+            </ul>
+            <a href="#" class="action-button">Khám Phá CapCut Premium</a>
+        </section>
+
+        <!-- YouTube Premium Section -->
+        <section id="youtube" class="app-section">
+            <h2>YouTube Premium</h2>
+            <p>📺 Trải nghiệm YouTube không quảng cáo với YouTube Premium, cùng nhiều tính năng cao cấp khác.</p>
+            <ul>
+                <li>🎬 Xem video không có quảng cáo.</li>
+                <li>📱 Xem video offline bất cứ lúc nào.</li>
+                <li>🔴 Phát video trong nền khi sử dụng ứng dụng khác.</li>
+            </ul>
+            <a href="#" class="action-button">Khám Phá YouTube Premium</a>
+        </section>
+
+        <!-- Giá và Liên Hệ -->
         <section class="pricing-section">
             <h2>Giá Chỉ Còn 88,000 VNĐ</h2>
-            <p>💰 Giá ưu đãi đặc biệt dành cho bạn.</p>
-            <a href="https://zalo.me/84969480562" class="action-button" target="_blank">Liên Hệ Ngay</a>
+            <p>💰 Giá ưu đãi đặc biệt dành cho bạn. Đừng bỏ lỡ cơ hội này!</p>
+            <a href="https://zalo.me/84969480562" class="action-button" target="_blank">Liên Hệ Ngay (Zalo)</a>
+            <p>📱 Bạn cũng có thể liên hệ qua các kênh khác:</p>
+            <a href="https://www.facebook.com/lductin589" class="action-button" target="_blank">Facebook</a>
+            <a href="https://www.instagram.com/lductin589" class="action-button" target="_blank">Instagram</a>
         </section>
 
         <section class="review-section">
             <h2>Khách Hàng Nói Gì?</h2>
             <p>🌟 "Dịch vụ tuyệt vời, giá quá tốt!" - Chị khách hàng tên A</p>
-            <p>🌟 "Tốc độ xử lý nhanh, hỗ trợ rất nhiệt tình!" - Chị khách hàng tên P</p>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2024 Locket Gold. Designed by Lê Đức Tín.</p>
+        <p>&copy; 2024 Premium Services Hub. All rights reserved.</p>
     </footer>
 
     <script>
-        function scrollToContent() {
-            document.getElementById('main-content').scrollIntoView({ behavior: 'smooth' });
+        function scrollToSection(sectionId) {
+            var element = document.getElementById(sectionId);
+            element.scrollIntoView({ behavior: 'smooth' });
         }
     </script>
+
 </body>
 </html>
